# kant-labs

./: README.md  install_xfce_native.sh  main.cpp  Задание.txt
lab-1/: CMakeLists.txt  lab.txt  main.cpp
lab-10/: main.cpp
lab-11/: main.cpp
lab-2/: CMakeLists.txt  main.cpp  Задание.txt
lab-3/: main.cpp  Задание.txt
lab-4/: Poyasnenye.txt  main.cpp  Задание.txt
lab-5/: Задание.txt
lab-5/1/: main.cpp
lab-5/2/: main.cpp
lab-7/: CMakeLists.txt  main.cpp  Задание.txt
lab-8.2/: CMakeLists.txt  input.txt  main.cpp  Задание.txt
lab-9/: main.cpp  Задание.txt
test/: CMakeLists.txt  test.cpp  test1.cpp
test1/: CMakeLists.txt  test.cpp
test2/: main.cpp
test3/: main.cpp
